Refactor and performance